<resources>
    <string name="app_name">玩转安卓</string>

    <!--  首页  -->
    <string name="hint_home_search">搜索关键词以空格形式隔开</string>


    <!--我的页面-->
    <string name="user_integral">积分</string>
    <string name="user_collect">收藏</string>
    <string name="user_article">文章</string>
    <string name="user_click_login">点击登录</string>

    <string name="user_to_do">TODO</string>
    <string name="user_open_source_website">开源网站</string>
    <string name="user_join_us">加入我们</string>
    <string name="user_setting">设置</string>

    <string name="user_background">用户自定义背景图</string>

    <string name="setting_logout">退出登录</string>
    <string name="setting_about_us">关于我们</string>

    <!--  登录、注册界面  -->
    <string name="login_account">账号</string>
    <string name="login_password">密码</string>
    <string name="login_repassword">确认密码</string>
    <string name="login_title">账号登录</string>
    <string name="login_submit">登录</string>
    <string name="register">注册</string>
    <string name="register_title">注册账号</string>
    <string name="register_nickname">用户名</string>

</resources>