<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="click"
            type="net.wan.android.ui.fragment.login.LoginFragment.ProxyClick" />

        <variable
            name="vm"
            type="net.wan.android.ui.viewmodel.state.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/login_title"
            android:textColor="@color/textTitle"
            android:textSize="@dimen/text_large_title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/margin_end"
            android:hint="@string/login_account"
            android:text="@={vm.account}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_end"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:text="@={vm.password}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_account" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:onClick="@{()-> click.onRegister()}"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_password" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/bg_primary_circle"
            android:onClick="@{()->click.onLogin()}"
            android:text="@string/login_submit"
            android:textColor="@color/textWhite"
            app:layout_constraintTop_toBottomOf="@id/edit_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>