<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="net.wan.android.ui.viewmodel.state.TabUserViewModel" />

        <variable
            name="click"
            type="net.wan.android.ui.fragment.user.TabUserFragment.ProxyClick" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/user_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/user_background"
            app:imageUrl="@{vm.backgroundId}"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/user_header"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:onClick="@{()->click.clickHeader()}"
            app:layout_constraintBottom_toBottomOf="@id/user_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_background"
            app:userHeader="@{vm.userHeader}" />

        <TextView
            android:id="@+id/user_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@={vm.userNickname}"
            android:textSize="@dimen/text_large_size"
            app:layout_constraintStart_toStartOf="@id/user_header"
            app:layout_constraintTop_toBottomOf="@id/user_header" />

        <TextView
            android:id="@+id/user_integral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_integral"
            app:layout_constraintEnd_toStartOf="@id/user_collect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_nickname" />

        <TextView
            android:id="@+id/user_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_collect"
            app:layout_constraintEnd_toStartOf="@id/user_article"
            app:layout_constraintStart_toEndOf="@id/user_integral"
            app:layout_constraintTop_toBottomOf="@id/user_nickname" />

        <TextView
            android:id="@+id/user_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_article"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_collect"
            app:layout_constraintTop_toBottomOf="@id/user_nickname" />

        <TextView
            android:id="@+id/integral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@{vm.userIntegral}"
            app:layout_constraintEnd_toEndOf="@id/user_integral"
            app:layout_constraintStart_toStartOf="@id/user_integral"
            app:layout_constraintTop_toBottomOf="@id/user_integral" />

        <View
            style="@style/verticalLine"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="@id/collect"
            app:layout_constraintEnd_toStartOf="@id/collect"
            app:layout_constraintStart_toEndOf="@id/integral"
            app:layout_constraintTop_toTopOf="@id/user_collect" />

        <TextView
            android:id="@+id/collect"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@{vm.userCollect}"
            app:layout_constraintEnd_toEndOf="@id/user_collect"
            app:layout_constraintStart_toStartOf="@id/user_collect"
            app:layout_constraintTop_toBottomOf="@id/user_collect" />

        <View
            style="@style/verticalLine"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="@id/collect"
            app:layout_constraintEnd_toStartOf="@id/article"
            app:layout_constraintStart_toEndOf="@id/collect"
            app:layout_constraintTop_toTopOf="@id/user_collect" />

        <TextView
            android:id="@+id/article"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@{vm.userArticle}"
            app:layout_constraintEnd_toEndOf="@id/user_article"
            app:layout_constraintStart_toStartOf="@id/user_article"
            app:layout_constraintTop_toBottomOf="@id/user_article" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/bgGrey"
            app:layout_constraintTop_toBottomOf="@id/collect" />

        <TextView
            android:id="@+id/todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->click.addTODO()}"
            android:padding="12dp"
            android:text="@string/user_to_do"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <TextView
            android:id="@+id/source_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->click.onOpen()}"
            android:padding="12dp"
            android:text="@string/user_open_source_website"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            app:layout_constraintTop_toBottomOf="@id/todo" />

        <TextView
            android:id="@+id/join_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->click.onAbout()}"
            android:padding="12dp"
            android:text="@string/user_join_us"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            app:layout_constraintTop_toBottomOf="@id/source_website" />

        <TextView
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->click.setting()}"
            android:padding="12dp"
            android:text="@string/user_setting"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            app:layout_constraintTop_toBottomOf="@id/join_us" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>